k8s/apps/vod-arr/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/part-of: prowlarr
    app.kubernetes.io/version: 2.6.2
  name: prowlarr
spec:
  ports:
    - name: http
      port: 9696
      protocol: TCP
      targetPort: http
    - name: metrics
      port: 9709
      protocol: TCP
      targetPort: metrics
  selector:
      app.kubernetes.io/component: server
      app.kubernetes.io/name: prowlarr
      app.kubernetes.io/part-of: prowlarr
  sessionAffinity: None
  type: ClusterIP
