k8s/apps/vod-arr/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    item.homer.rajsingh.info/name: "Prowlarr"
    item.homer.rajsingh.info/subtitle: "Indexer manager"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/npm/@loganmarchione/homelab-svg-assets@latest/assets/prowlarr.svg"
    item.homer.rajsingh.info/tag: "local"
    item.homer.rajsingh.info/tagstyle: "is-success"
    item.homer.rajsingh.info/order: "40"
    service.homer.rajsingh.info/name: "Multimedia"
    service.homer.rajsingh.info/icon: "fa fa-tv"
    service.homer.rajsingh.info/order: "20"
  labels:
    homer.rajsingh.info/enabled: "true"
  name: prowlarr
spec:
  ingressClassName: private
  rules:
    - host: prowlarr.ankhmorpork.thaum.xyz
      http:
        paths:
          - backend:
              service:
                name: prowlarr
                port:
                  number: 9696
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - prowlarr.ankhmorpork.thaum.xyz
      secretName: prowlarr-ankhmorpork-thaum-xyz-tls
